stdlize the framework and add service support

--- a/skeleton/.htaccess
+++ b/skeleton/.htaccess
@@ -1,7 +1,7 @@
 #url rewrite rule
-RewriteEngine On
-RewriteBase /
-RewriteRule ^(\w+/?)+(\.(html|htm|do))?(\?[^\?]+)?$ index.php [L]
+#RewriteEngine On
+#RewriteBase /
+#RewriteRule ^(\w+/?)+(\.(html|htm|do))?(\?[^\?]+)?$ index.php [L]
 
 #Nginx url rewrite
-#rewrite ^[\w/]+(\?[^\?]+)?$ /index.php 	break;
+rewrite ^[\w/]+(\?[^\?]+)?$ /index.php 	break;
