--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/skeleton/storage/cache/
-/skeleton/storage/tmp
-/skeleton/www/cache/
-/skeleton/www/uploadfiles/
+/skeleton/storage/cache/*
+/skeleton/storage/tmp/*
+/skeleton/www/cache/*
+/skeleton/www/uploadfiles/*
 *.vim
 *.viminfo
 /session/*
@@ -9,7 +9,7 @@
 *.swp
 *.idea
 
-!/skeleton/www/uploadfiles/index.html
-!/skeleton/www/cache/index.html
 !/skeleton/storage/cache/index.html
 !/skeleton/storage/tmp/index.html
+!/skeleton/www/uploadfiles/index.html
+!/skeleton/www/cache/index.html
